--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ diffusers>=0.32.1
 accelerate>=1.1.1
 transformers>=4.46.2
 numpy==1.26.0
-torch>=2.5.0
-torchvision>=0.20.0
+# torch>=2.5.0
+# torchvision>=0.20.0
 sentencepiece>=0.2.0
-SwissArmyTransformer>=0.4.12
+# SwissArmyTransformer>=0.4.12 
 gradio>=5.5.0
 imageio>=2.35.1
 imageio-ffmpeg>=0.5.1
@@ -13,3 +13,7 @@ openai>=1.54.0
 moviepy>=2.0.0
 scikit-video>=1.1.11
 pydantic>=2.10.3
+opencv-python>=4.11.0.86
+spandrel>=0.4.1
+#pip install torch==2.6.0 torchvision==0.21.0 torchaudio==2.6.0 --index-url https://download.pytorch.org/whl/cu124
+#pip install -i https://mirrors.aliyun.com/pypi/simple/ --no-deps "SwissArmyTransformer==0.2.9"
